<resources>
    <string name="app_name">복닥복닥</string>
    <string name="title_recruit">복닥복닥 홈</string>
    <string name="title_recruit_buylist">함께구매 목록</string>
    <string name="title_recruit_buyreg">함께구매글 작성</string>
    <string name="title_recruit_buyprint">함께구매글 상세화면</string>
    <string name="title_recruit_buyenter">함께구매</string>

    <string name="title_recruit_sharelist">서로나눔 목록</string>
    <string name="title_recruit_sharereg">서로나눔글 작성</string>
    <string name="title_recruit_shareprint">서로나눔글 상세화면</string>
    <string name="title_recruit_shareenter">서로나눔</string>

    <string name="title_recruit_taxilist">함께택시 목록</string>
    <string name="title_recruit_taxireg">함께택시글 작성</string>
    <string name="title_recruit_taxiprint">함께택시 상세화면</string>

    <string name="title_board">도란도란</string>
    <string name="title_board_postlist">자유게시판</string>
    <string name="title_board_regform">자유글쓰기</string>
    <string name="title_board_printform">자유게시글 상세화면</string>

    <string name="title_board_votelist">투표게시판</string>
    <string name="title_board_votereg">투표글쓰기</string>
    <string name="title_board_voteprint">투표게시글 상세화면</string>

    <string name="title_safety">안전기능</string>
    <string name="title_safety_home">안전귀가</string>
    <string name="title_safety_calldisplay">통화화면</string>
    <string name="title_safety_voice">보이스가드</string>
    <string name="title_safety_contact">비상연락망</string>
    <string name="title_safety_regform">새로운 연락처</string>

    <string name="title_chat">채팅</string>

    <string name="title_mypage">마이페이지</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="kakao_app_key">2ebe3d860e1ba4cf162c32dda83084d6</string>
    <string name="google_maps_key" translatable="false">AIzaSyDQXQ2WJtKgfrat_vjszwT5MzDxN5XwEa0</string>
    <string name="title_activity_join_map">join_map</string>
</resources>