<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_board"
        android:icon="@drawable/ic_board"
        android:title="@string/title_board" />

    <item
        android:id="@+id/navigation_safety"
        android:icon="@drawable/ic_safety"
        android:title="@string/title_safety" />

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/ic_chat"
        android:title="@string/title_chat" />

    <item
        android:id="@+id/navigation_mypage"
        android:icon="@drawable/ic_mypage"
        android:title="@string/title_mypage" />

</menu>