<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_recruit">

    <!-- 홈 화면(모집글) -->
    <fragment
        android:id="@+id/navigation_recruit"
        android:name="com.example.myapplication.ui.recruit.MainActivity_Recruit"
        android:label="@string/title_recruit"
        tools:layout="@layout/recruit_main" >
        <action
            android:id="@+id/action_navigation_recruit_to_navigation_recruit_buylist"
            app:destination="@id/navigation_recruit_buylist"
            app:popUpTo="@id/navigation_recruit_buylist"
            app:popUpToInclusive="false" />
        <action
            android:id="@+id/action_navigation_recruit_to_navigation_recruit_sharelist"
            app:destination="@id/navigation_recruit_sharelist"
            app:popUpTo="@id/navigation_recruit_sharelist"
            app:popUpToInclusive="false" />
    </fragment>

    <!-- 공동구매 모집글 목록 -->
    <fragment
        android:id="@+id/navigation_recruit_buylist"
        android:name="com.example.myapplication.ui.recruit.BuyList_Recruit"
        android:label="@string/title_recruit_buylist"
        tools:layout="@layout/recruit_buylist" >
        <!-- 공동구매 모집글 목록 화면에서 공동구매 폼 등록 화면으로 이동하는 액션 -->
        <action
            android:id="@+id/action_navigation_recruit_buylist_to_navigation_recruit_buyreg"
            app:destination="@id/navigation_recruit_buyreg"
            app:popUpTo="@id/navigation_recruit_buyreg"
            app:popUpToInclusive="false" />
    </fragment>

    <!-- 공동구매 모집글 등록 -->
    <fragment
        android:id="@+id/navigation_recruit_buyreg"
        android:name="com.example.myapplication.ui.recruit.BuyReg_Recruit"
        android:label="@string/title_recruit_buyreg"
        tools:layout="@layout/recruit_buyreg" >
        <!-- 공동구매 폼 등록 화면에서 공동구매 폼 출력 화면으로 이동하는 액션 -->
        <action
            android:id="@+id/action_navigation_recruit_buyreg_to_navigation_recruit_buyprint"
            app:destination="@id/navigation_recruit_buyprint"
            app:popUpTo="@id/navigation_recruit_buyprint"
            app:popUpToInclusive="false" />
    </fragment>

    <!-- 공동구매 모집글 -->
    <fragment
        android:id="@+id/navigation_recruit_buyprint"
        android:name="com.example.myapplication.ui.recruit.BuyPrint_Recruit"
        android:label="@string/title_recruit_buyprint"
        tools:layout="@layout/recruit_buyprint" >
        <!-- 공동구매 폼 출력 화면에서 공동구매 모집글 참여하기 화면으로 이동하는 액션 -->
        <action
            android:id="@+id/action_navigation_recruit_buyprint_to_navigation_recruit_buyenter"
            app:destination="@id/navigation_recruit_buyenter"
            app:popUpTo="@id/navigation_recruit_buyenter"
            app:popUpToInclusive="false" />
    </fragment>

    <!-- 공동구매 모집글 참여하기-->
    <fragment
        android:id="@+id/navigation_recruit_buyenter"
        android:name="com.example.myapplication.ui.recruit.BuyEnter_Recruit"
        android:label="@string/title_recruit_buyenter"
        tools:layout="@layout/recruit_buyenter" >
        <!-- 공동구매 모집글 참여하기 화면에서 공동구매 모집글 화면으로 이동하는 액션 -->
        <action
            android:id="@+id/action_navigation_recruit_buyenter_to_navigation_recruit_buyprint"
            app:destination="@id/navigation_recruit_buyprint"
            app:popUpTo="@id/navigation_recruit_buyprint"
            app:popUpToInclusive="false" />
    </fragment>

    //

    <!-- 무료나눔 모집글 목록 -->
    <fragment
        android:id="@+id/navigation_recruit_sharelist"
        android:name="com.example.myapplication.ui.recruit.ShareList_Recruit"
        android:label="@string/title_recruit_sharelist"
        tools:layout="@layout/recruit_sharelist" >
        <!-- 무료나눔 모집글 목록 화면에서 무료나눔 폼 등록 화면으로 이동하는 액션 -->
        <action
            android:id="@+id/action_navigation_recruit_sharelist_to_navigation_recruit_sharereg"
            app:destination="@id/navigation_recruit_sharereg"
            app:popUpTo="@id/navigation_recruit_sharereg"
            app:popUpToInclusive="false" />
    </fragment>

    <!-- 무료나눔 모집글 등록 -->
    <fragment
        android:id="@+id/navigation_recruit_sharereg"
        android:name="com.example.myapplication.ui.recruit.ShareReg_Recruit"
        android:label="@string/title_recruit_sharereg"
        tools:layout="@layout/recruit_sharereg" >
        <!-- 무료나눔 폼 등록 화면에서 무료나눔 폼 출력 화면으로 이동하는 액션 -->
        <action
            android:id="@+id/action_navigation_recruit_sharereg_to_navigation_recruit_shareprint"
            app:destination="@id/navigation_recruit_shareprint"
            app:popUpTo="@id/navigation_recruit_shareprint"
            app:popUpToInclusive="false" />
    </fragment>

    <!-- 무료나눔 모집글 -->
    <fragment
        android:id="@+id/navigation_recruit_shareprint"
        android:name="com.example.myapplication.ui.recruit.SharePrint_Recruit"
        android:label="@string/title_recruit_shareprint"
        tools:layout="@layout/recruit_shareprint" >
        <!-- 무료나눔 폼 출력 화면에서 무료나눔 모집글 나눔받기 화면으로 이동하는 액션 -->
        <action
            android:id="@+id/action_navigation_recruit_shareprint_to_navigation_recruit_shareenter"
            app:destination="@id/navigation_recruit_shareenter"
            app:popUpTo="@id/navigation_recruit_shareenter"
            app:popUpToInclusive="false" />
    </fragment>

    <!-- 무료나눔 모집글 참여하기-->
    <fragment
        android:id="@+id/navigation_recruit_shareenter"
        android:name="com.example.myapplication.ui.recruit.ShareEnter_Recruit"
        android:label="@string/title_recruit_shareenter"
        tools:layout="@layout/recruit_shareenter" >
        <!-- 무료나눔 모집글 나눔받기 화면에서 무료나눔 모집글 화면으로 이동하는 액션 -->
        <action
            android:id="@+id/action_navigation_recruit_shareenter_to_navigation_recruit_shareprint"
            app:destination="@id/navigation_recruit_shareprint"
            app:popUpTo="@id/navigation_recruit_shareprint"
            app:popUpToInclusive="false" />
    </fragment>




    <!-- 게시판 화면 -->
    <fragment
        android:id="@+id/navigation_board"
        android:name="com.example.myapplication.ui.board.MainActivity_Board"
        android:label="@string/title_board"
        tools:layout="@layout/board_main" >

        <!-- 게시판 화면에서 게시글 목록으로 이동하는 액션 -->
        <action
            android:id="@+id/action_navigation_board_to_navigation_board_postlist"
            app:destination="@id/navigation_board_postlist"
            app:popUpTo="@id/navigation_board_postlist"
            app:popUpToInclusive="false" />

        <!-- 게시판 화면에서 홈 화면으로 이동하는 액션 -->
        <action
            android:id="@+id/action_navigation_board_to_navigation_recruit"
            app:destination="@id/navigation_recruit"
            app:popUpTo="@id/navigation_recruit"
            app:popUpToInclusive="true" />

        <!-- 게시판 화면에서 투표글 목록으로 이동하는 액션 -->
        <action
            android:id="@+id/action_navigation_board_to_navigation_board_votelist"
            app:destination="@id/navigation_board_votelist"
            app:popUpTo="@id/navigation_board_votelist"
            app:popUpToInclusive="false" />

    </fragment>

    <!-- 게시글 목록 화면 -->
    <fragment
        android:id="@+id/navigation_board_postlist"
        android:name="com.example.myapplication.ui.board.PostList_Board"
        android:label="@string/title_board_postlist"
        tools:layout="@layout/board_postlist" >

        <!-- 게시글 목록 화면에서 등록 폼으로 이동하는 액션 -->
        <action
            android:id="@+id/action_navigation_board_postlist_to_navigation_board_regform"
            app:destination="@id/navigation_board_regform"
            app:popUpTo="@id/navigation_board_postlist"
            app:popUpToInclusive="false" />
    </fragment>

    <!-- 등록 폼 화면 -->
    <fragment
        android:id="@+id/navigation_board_regform"
        android:name="com.example.myapplication.ui.board.RegForm_Board"
        android:label="@string/title_board_regform"
        tools:layout="@layout/board_regform" >

        <!-- 등록 폼 화면에서 출력 폼으로 이동하는 액션 -->
        <action
            android:id="@+id/action_navigation_board_regform_to_navigation_board_printform"
            app:destination="@id/navigation_board_printform"
            app:popUpTo="@id/navigation_board_postlist"
            app:popUpToInclusive="false"/>
    </fragment>

    <!-- 출력 폼 화면 -->
    <fragment
        android:id="@+id/navigation_board_printform"
        android:name="com.example.myapplication.ui.board.PrintForm_Board"
        android:label="@string/title_board_printform"
        tools:layout="@layout/board_printform" >

        <!-- 출력 폼 화면에서 게시글 목록으로 이동하는 액션 -->
        <action
            android:id="@+id/action_navigation_board_printform_to_navigation_board_postlist"
            app:destination="@id/navigation_board_postlist"
            app:popUpTo="@id/navigation_board_postlist"
            app:popUpToInclusive="false" />
    </fragment>

    <!-- 기타 프래그먼트들 -->
    <!-- SafetyFragment, ChatFragment, MypageFragment 등 -->

    <!-- 투표 게시판 화면 -->


    <!-- 투표글 목록 화면 -->
    <fragment
        android:id="@+id/navigation_board_votelist"
        android:name="com.example.myapplication.ui.board.VoteList_Board"
        android:label="@string/title_board_votelist"
        tools:layout="@layout/board_votelist" >

        <!-- 투표글 목록 화면에서 등록 폼으로 이동하는 액션 -->
        <action
            android:id="@+id/action_navigation_board_votelist_to_navigation_board_votereg"
            app:destination="@id/navigation_board_votereg"
            app:popUpTo="@id/navigation_board_votelist"
            app:popUpToInclusive="false" />
    </fragment>

    <!-- 투표 등록 폼 화면 -->
    <fragment
        android:id="@+id/navigation_board_votereg"
        android:name="com.example.myapplication.ui.board.VoteReg_Board"
        android:label="@string/title_board_votereg"
        tools:layout="@layout/board_votereg" >

        <!-- 투표등록 폼 화면에서 출력 폼으로 이동하는 액션 -->
        <action
            android:id="@+id/action_navigation_board_votereg_to_navigation_board_voteprint"
            app:destination="@id/navigation_board_voteprint"
            app:popUpTo="@id/navigation_board_votelist"
            app:popUpToInclusive="false"/>
    </fragment>

    <!-- 투표출력 폼 화면 -->
    <fragment
        android:id="@+id/navigation_board_voteprint"
        android:name="com.example.myapplication.ui.board.VotePrint_Board"
        android:label="@string/title_board_voteprint"
        tools:layout="@layout/board_voteprint" >

        <!-- 투표 출력 폼 화면에서 투표글 목록으로 이동하는 액션 -->
        <action
            android:id="@+id/action_navigation_board_voteprint_to_navigation_board_votelist"
            app:destination="@id/navigation_board_votelist"
            app:popUpTo="@id/navigation_board_votelist"
            app:popUpToInclusive="false" />
    </fragment>


    <!-- 안전 화면 메인 -->
    <fragment
        android:id="@+id/navigation_safety"
        android:name="com.example.myapplication.ui.safety.MainActivity_Safety"
        android:label="@string/title_safety"
        tools:layout="@layout/safety_main" >

        <!-- 안전 화면에서 홈화면으로 이동하는 액션 -->
        <action
            android:id="@+id/action_navigation_safety_to_navigation_recruit"
            app:destination="@id/navigation_recruit"
            app:popUpTo="@id/navigation_recruit"
            app:popUpToInclusive="true" />


        <!-- 안전 화면에서 안전귀가 화면으로 이동하는 액션 -->
        <action
            android:id="@+id/action_navigation_safety_to_navigation_safety_home"
            app:destination="@id/navigation_safety_home"
            app:popUpTo="@id/navigation_safety_home"
            app:popUpToInclusive="false" />


        <!-- 안전 화면에서 통화화면으로 이동하는 액션 -->
        <action
            android:id="@+id/action_navigation_safety_to_navigation_safety_calldisplay"
            app:destination="@id/navigation_safety_calldisplay"
            app:popUpTo="@id/navigation_safety_calldisplay"
            app:popUpToInclusive="false" />

        <!-- 안전 화면에서 음성지원 화면으로 이동하는 액션 -->
        <action
            android:id="@+id/action_navigation_safety_to_navigation_safety_voice"
            app:destination="@id/navigation_safety_voice"
            app:popUpTo="@id/navigation_safety_voice"
            app:popUpToInclusive="false" />

        <!-- 안전 화면에서 비상연락처로 이동하는 액션 -->
        <action
            android:id="@+id/action_navigation_safety_to_navigation_safety_contact"
            app:destination="@id/navigation_safety_contact"
            app:popUpTo="@id/navigation_safety_contact"
            app:popUpToInclusive="false" />


    </fragment>

    <!-- 안전귀가 등록 화면 -->
    <fragment
        android:id="@+id/navigation_safety_home"
        android:name="com.example.myapplication.ui.safety.Home_Safety"
        android:label="@string/title_safety_home"
        tools:layout="@layout/safety_home">
        <action
            android:id="@+id/action_navigation_safety_home_to_navigation_safety_homenext"
            app:destination="@id/navigation_safety_homenext" />
    </fragment>


    <fragment
        android:id="@+id/navigation_safety_homenext"
        android:name="com.example.myapplication.ui.safety.HomeNext_Safety"
        android:label="@string/title_safety_home"
        tools:layout="@layout/safety_homenext" >
    </fragment>

    <!-- 비상연락망 목록 화면 -->
    <fragment
        android:id="@+id/navigation_safety_contact"
        android:name="com.example.myapplication.ui.safety.Contact_Safety"
        android:label="@string/title_safety_contact"
        tools:layout="@layout/safety_contact" >

        <!-- 비상연락망 목록 화면에서 등록 폼으로 이동하는 액션 -->
        <action
            android:id="@+id/action_navigation_safety_contact_to_navigation_safety_regform"
            app:destination="@id/navigation_safety_regform"
            app:popUpTo="@id/navigation_safety_contact"
            app:popUpToInclusive="false" />
    </fragment>

    <!-- 통화 화면 -->
    <fragment
        android:id="@+id/navigation_safety_calldisplay"
        android:name="com.example.myapplication.ui.safety.CallDisplay_Safety"
        android:label="@string/title_safety_calldisplay"
        tools:layout="@layout/safety_calldisplay" >
    </fragment>

    <!-- 음성지원 화면 -->
    <fragment
        android:id="@+id/navigation_safety_voice"
        android:name="com.example.myapplication.ui.safety.Voice_Safety"
        android:label="@string/title_safety_voice"
        tools:layout="@layout/safety_voice" >
    </fragment>

    <fragment
        android:id="@+id/navigation_safety_regform"
        android:name="com.example.myapplication.ui.safety.RegForm_Safety"
        android:label="@string/title_safety_contact"
        tools:layout="@layout/safety_regform" >
        <!-- 등록 폼에서 비상연락망으로 이동하는 액션 -->
        <action
            android:id="@+id/action_navigation_safety_regform_to_navigation_safety_contact"
            app:destination="@id/navigation_safety_contact"
            app:popUpTo="@id/navigation_safety_contact"
            app:popUpToInclusive="false" />
    </fragment>

</navigation>
